<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/globalConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/containerDots"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:ci_drawable="@drawable/circle_radius_selected"
        app:ci_drawable_unselected="@drawable/circle_radius_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtSkip"
        style="@style/GenericTextTitle"
        android:layout_width="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/allSkip"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/containerDots"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/containerDots"
        app:layout_constraintTop_toTopOf="@+id/containerDots" />

    <ImageButton
        android:id="@+id/imbNext"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/appName"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/containerDots"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/containerDots"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerDots"
        app:srcCompat="@drawable/ic_arrow" />

    <TextView
        android:id="@+id/txtFinish"
        style="@style/GenericTextTitle"
        android:layout_width="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/allAccept"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/containerDots"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/containerDots"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerDots" />
</android.support.constraint.ConstraintLayout>